--- a/source/includes/extracts-uri-positional.yaml
+++ b/source/includes/extracts-uri-positional.yaml
@@ -17,7 +17,7 @@ content: |
      {{binaryname}} --username joe --password secret1 mongodb://mongodb0.example.com:27017 --ssl
   
   Only one connection string can be provided. Attempting to
-  include more than one, whether using the :option:`--uri <{{binaryname}} --uri` option or as
+  include more than one, whether using the :option:`--uri <{{binaryname}} --uri>` option or as
   a positional argument, will result in an error.
 
 ---
