--- a/snooty.toml
+++ b/snooty.toml
@@ -11,7 +11,7 @@ dbtools-short = "Database Tools"
 dbtools-pkg = "mongodb-database-tools"
 package-name-org = "mongodb-org"
 package-name-enterprise = "mongodb-enterprise"
-version = "{+version+}"
+version = "100.1.1"
 release = "{+version+}"
 pgp-version = "{+version+}"
 pgp-fingerprint = "E162F504A20CDF15827F718D4B7C549A058F8B6B"
