remove unneeded intersphinx entries

--- a/snooty.toml
+++ b/snooty.toml
@@ -1,7 +1,9 @@
 name = "database-tools"
 title = "MongoDB Database Tools"
 
-intersphinx = [ "https://docs.mongodb.com/manual/objects.inv" , "https://docs.python.org/2/objects.inv", "https://docs.python.org/2/objects.inv", "https://docs.python.org/3/objects.inv",  "https://docs.atlas.mongodb.com/objects.inv", "https://docs.mongodb.com/compass/current/objects.inv"]
+intersphinx = [ "https://docs.mongodb.com/manual/objects.inv", 
+                "https://docs.atlas.mongodb.com/objects.inv", 
+                "https://docs.mongodb.com/compass/current/objects.inv"]
 
 toc_landing_pages = ["/"]
 
